--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "chart.js": "^4.5.0",
+    "chartjs-plugin-trendline": "^3.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
