--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-trendline": "^3.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
